# integration-tests-example

./: .gitignore  Cargo.toml  README.md
integration-tests/: assync_hello_test_without_annotation.rs  async_hello_test_with_annotation.rs  logger.rs  main.rs  sync_test_with_annotation.rs  sync_test_without_annotation.rs
src/: lib.rs  main.rs
