[package]
name = "server-for-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server-for-example"
path = "src/main.rs"

[lib]
name = "server_app"
path = "src/lib.rs"

[dependencies]
dotenv = "0.15.0"
log = "0.4.14"
env_logger = "0.9.0"
actix-web = "4"

[dev-dependencies]
inventory = "0.1"
futures = "0.3.21"
reqwest = { version = "0.11.10", features = ["json"]}
chrono = "0.4.19"
once_cell = "1.9.0"

[[test]]
name = "integration"
path = "integration-tests/main.rs"
harness = false